force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/cgcloud__Segmentation_Rule_Def_Column__c.object-meta.xml
<CustomObject>
    <description>Define the query attributes of the Segmentation Rule Definition.</description>
    <label>Segmentation Rule Definition Column</label>
    <nameField>
        <displayFormat>SRP-{00000}</displayFormat>
        <label>Segmentation Rule Definition Column</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segmentation Rule Definition Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>