force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/fields/cgcloud__Field_Alias__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Alias__c</fullName>
    <description>Alias specified in the SOQL building.</description>
    <inlineHelpText>SOQL Binding (e.g: $AccCity$)</inlineHelpText>
    <label>Field Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>