force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/fields/cgcloud__Field_Default__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Default__c</fullName>
    <description>Default value which is shown when the input mask is rendered for this field.</description>
    <inlineHelpText>Default value which is shown when the input mask is rendered for this field</inlineHelpText>
    <label>Field Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>