force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/fields/cgcloud__Field_List_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_List_Template__c</fullName>
    <description>If the field type is &quot;List&quot; this defines the content of the list.</description>
    <inlineHelpText>If the field type is &quot;List&quot; this defines the content of the list. Possible values are</inlineHelpText>
    <label>Field List Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>