force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/fields/cgcloud__Field_Number_Digits__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Number_Digits__c</fullName>
    <description>For Number fields, it defines the number of digits after the decimal point.</description>
    <inlineHelpText>For Number fields, it defines the number of digits after the decimal point.</inlineHelpText>
    <label>Field Number Digits</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>