force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/fields/cgcloud__Field_Picklist_Target__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Picklist_Target__c</fullName>
    <description>If the field type is &quot;Picklist&quot; or &quot;List&quot; with template &quot;Picklist&quot; this defines picklist to choose. 
        Format is &quot;&lt;sObject&gt;.&lt;Attribute&gt;&quot;. Is ignored for any other field type.</description>
    <inlineHelpText>If the field type is &quot;Picklist&quot; or &quot;List&quot; with template &quot;Picklist&quot; this defines picklist to choose. Format
      is &quot;&lt;sObject&gt;.&lt;Attribute&gt;&quot; including relevant namespace. Is ignored for any other field type.</inlineHelpText>
    <label>Field Picklist Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>