force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/fields/cgcloud__Field_Regex__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Regex__c</fullName>
    <description>Applies to user input. If input is a list, the regex applies to each list entry separately.</description>
    <inlineHelpText>Applies to user input. If input is a list, the regex applies to each list entry separately.</inlineHelpText>
    <label>Field Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>