force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/fields/cgcloud__Field_Title__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Title__c</fullName>
    <description>Defines the label of the field used for define the segmentation parameters.</description>
    <label>Field Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>