force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/fields/cgcloud__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Type__c</fullName>
    <description>Defines the type of the field used for define the segmentation parameters.</description>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>list</fullName>
            </value>
            <value>
                <fullName>boolean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>