force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/fields/cgcloud__Segmentation_Rule_Def__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Segmentation_Rule_Def__c</fullName>
    <description>Reference to segmentation rule definition.</description>
    <label>Segmentation Rule Definition</label>
    <referenceTo>cgcloud__Segmentation_Rule_Def__c</referenceTo>
    <relationshipLabel>Segmentation Rule Definition Columns</relationshipLabel>
    <relationshipName>Segmentation_Rule_Def_Columns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>