force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/validationRules/cgcloud__Field_List_Template.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Field_List_Template</fullName>
    <active>true</active>
    <description>This field can only be filled if the Field Type is &apos;List&apos;.</description>
    <errorConditionFormula>(TEXT(cgcloud__Field_Type__c) &lt;&gt; &apos;list&apos; &amp;&amp; TEXT(cgcloud__Field_List_Template__c ) &lt;&gt; &apos;&apos;)
      ||
      (TEXT(cgcloud__Field_Type__c) = &apos;list&apos; &amp;&amp; TEXT(cgcloud__Field_List_Template__c ) = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>cgcloud__Field_List_Template__c</errorDisplayField>
    <errorMessage>This field can only be filled if the Field Type is &apos;List&apos;.</errorMessage>
</ValidationRule>