force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/validationRules/cgcloud__Field_Picklist_Target.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Field_Picklist_Target</fullName>
    <active>true</active>
    <description>For picklists and multi-picklists the field picklist target must follow a proper format</description>
    <errorConditionFormula>(NOT(REGEX( cgcloud__Field_Picklist_Target__c , &apos;&lt;([^ ]+)&gt;.&lt;([^ ]+)&gt;&apos;)) &amp;&amp; (TEXT(cgcloud__Field_Type__c) == &apos;picklist&apos; || TEXT(cgcloud__Field_List_Template__c) == &apos;picklist&apos;))
      ||
      (cgcloud__Field_Picklist_Target__c &lt;&gt; &apos;&apos; &amp;&amp; ( TEXT(cgcloud__Field_Type__c) &lt;&gt; &apos;picklist&apos; &amp;&amp; TEXT(cgcloud__Field_List_Template__c) &lt;&gt; &apos;picklist&apos; ))</errorConditionFormula>
    <errorDisplayField>cgcloud__Field_Picklist_Target__c</errorDisplayField>
    <errorMessage>This field can only be filled when Field Type is &apos;Picklist&apos; or Field List Template is &apos;Picklist&apos;. When so, Picklist Target must be like &apos;&lt;myobject&gt;.&lt;myfield__c&gt;&apos;. Spaces aren&apos;t allowed.</errorMessage>
</ValidationRule>