force-app/main/default/objects/cgcloud__Segmentation_Rule_Def_Column__c/validationRules/cgcloud__No_Edit_when_Definition_is_Released.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__No_Edit_when_Definition_is_Released</fullName>
    <active>true</active>
    <description>Definition Column can&apos;t be added or edited if the Segmentation Rule Definition State is &apos;Released&apos;.</description>
    <errorConditionFormula>TEXT(cgcloud__Segmentation_Rule_Def__r.cgcloud__State__c) = &apos;Released&apos;</errorConditionFormula>
    <errorMessage>Definition Column can&apos;t be added or edited if the Segmentation Rule Definition State is &apos;Released&apos;.</errorMessage>
</ValidationRule>